# sqlite_rls

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rls_repl.rs
.cursor/rules/: testing.mdc
examples/: basic_rls.rs
src/: ast.rs  compat.rs  connection.rs  error.rs  lib.rs  main.rs  parser.rs  policy.rs  prelude.rs  rewriter.rs  sql_parser.rs
tests/: common.rs  policy_tests.rs  rls_select_test.rs  rls_tests.rs  test_complex_policies.rs  test_select_policies.rs  test_write_policies.rs
