[package]
name = "libsql_rls"
version = "0.1.0"
edition = "2021"
description = "Row Level Security extension for libSQL (Proof of Concept)"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/libsql_rls"

[lib]
name = "libsql_rls"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "libsql_shell"
path = "src/bin/shell.rs"

[dependencies]
# Core dependencies for libSQL integration
libsql = { version = "0.2.0", default-features = false }
sqlparser = "0.35.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }

# Utilities
thiserror = "1.0.40"
anyhow = "1.0.71"
log = "0.4.17"
env_logger = "0.10.0"
clap = { version = "4.2.7", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }

[dev-dependencies]
tempfile = "3.5.0"
pretty_assertions = "1.3.0"
test-case = "3.1.0"

[features]
default = []
test-utils = []

[package.metadata]
status = "proof-of-concept"
notes = "This is a proof of concept that demonstrates the architectural approach to implementing Row Level Security in libSQL through AST manipulation." 