[package]
name = "rls_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
tempfile = "3.4.0"
anyhow = "1.0.71"
libsql = { version = "0.9.5", features = ["default"], optional = true }
clap = { version = "4.0.22", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
smol = "1.3.0"
futures = "0.3.26"
sqlparser = { version = "0.35.0" }
async-trait = "0.1.68"
thiserror = "1.0.40"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.28.1", features = ["full"] }
pretty_assertions = "1.4.0"
log = "0.4.17"
env_logger = "0.10.0"
rustyline = "10.0.0"
rand = "0.9.1"

[lib]
name = "rls"
path = "src/lib.rs"

[[bin]]
name = "rls_demo"
path = "src/main.rs"

[dev-dependencies]
insta = "1.31.0"
pretty_assertions = "1.4.0"

[features]
default = ["libsql"]

[package.metadata]
status = "proof-of-concept"
notes = "This is a proof of concept that demonstrates the architectural approach to implementing Row Level Security in libSQL through AST manipulation." 
