[package]
name = "libsql_rls"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlparser = "0.35"
libsql = "0.2"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.33", features = ["full"] }
regex = "1.10"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.8"
insta = "1.31.0"
pretty_assertions = "1.4.0"

[lib]
name = "libsql_rls"
path = "src/lib.rs"

[package.metadata]
status = "proof-of-concept"
notes = "This is a proof of concept that demonstrates the architectural approach to implementing Row Level Security in libSQL through AST manipulation." 
